# portainer-cli-rs

./: Cargo.toml  flake.nix
src/: application.rs  main.rs  portainer.rs
src/portainer/: api.rs  client.rs  commands.rs  requests.rs  session.rs
