[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = [ "Hossein Naderi" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip", "brotli", "deflate", "socks"] }
rpassword = "7.2.0"
serde= { version = "1.0.91", features=  ["derive"]}
serde_json= "1.0.91"
tokio = { version = "1", features = ["full"] }
